kasten-cel/k10-data-protection-by-label/.chainsaw-test/deployment-bad-nolabel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeploy01
  labels:
    app: busybox
    purpose: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        command:
        - "sleep"
        - "3600"
