kasten-cel/k10-data-protection-by-label/.chainsaw-test/deployment-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeploy01
  namespace: k10-dplabel-ns
  labels:
    app: busybox
    purpose: production
    dataprotection: k10-goldpolicy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        command:
        - "sleep"
        - "3600"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeploy02
  namespace: k10-dplabel-ns
  labels:
    app: busybox
    purpose: development
    dataprotection: foo-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        command:
        - "sleep"
        - "3600"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeploy03
  namespace: k10-dplabel-ns
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        command:
        - "sleep"
        - "3600"
