kasten-cel/k10-data-protection-by-label/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k10-data-protection-by-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
