kasten-cel/k10-data-protection-by-label/.chainsaw-test/ss-bad-nolabel.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bad-ss01
  labels:
    purpose: production
spec:
  selector:
    matchLabels:
      app: busybox
  serviceName: busybox-ss
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
