kasten-cel/k10-data-protection-by-label/.chainsaw-test/ss-good.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: good-ss01
  namespace: k10-dplabel-ns
  labels:
    purpose: production
    dataprotection: k10-silverpolicy
spec:
  selector:
    matchLabels:
      app: busybox
  serviceName: busybox-ss
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: good-ss02
  namespace: k10-dplabel-ns
spec:
  selector:
    matchLabels:
      app: busybox
  serviceName: busybox-ss
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: good-ss02
  namespace: k10-dplabel-ns
  labels:
    purpose: development
    dataprotection: foo-bar
spec:
  selector:
    matchLabels:
      app: busybox
  serviceName: busybox-ss
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
